--- a/Sistema de Gerenciamento  de Fucionários/src/view/GUIPrincipal.form
+++ b/Sistema de Gerenciamento  de Fucionários/src/view/GUIPrincipal.form
@@ -118,6 +118,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtSairActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
