--- a/Sistema de Gerenciamento  de Fucionários/src/view/GUILista.form
+++ b/Sistema de Gerenciamento  de Fucionários/src/view/GUILista.form
@@ -179,12 +179,14 @@
             <Component class="javax.swing.JComboBox" name="jComboBox1">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="3">
+                  <StringArray count="4">
                     <StringItem index="0" value="Funcion&#xe1;rio"/>
                     <StringItem index="1" value="Estagi&#xe1;rio"/>
                     <StringItem index="2" value="Gerente"/>
+                    <StringItem index="3" value=""/>
                   </StringArray>
                 </Property>
+                <Property name="selectedIndex" type="int" value="3"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -194,6 +196,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Alterar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtAlterarActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
