--- a/Sistema de Gerenciamento  de Fucionários/src/view/GUIPrincipal.form
+++ b/Sistema de Gerenciamento  de Fucionários/src/view/GUIPrincipal.form
@@ -35,6 +35,9 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JDesktopPane" name="jdpAreadeTrabalho">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -88,7 +91,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jbtCadastro">
           <Properties>
-            <Property name="text" type="java.lang.String" value="CADASTRAR"/>
+            <Property name="text" type="java.lang.String" value="CADASTRO"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
                 <EtchetBorder/>
